<resources>
    <string name="app_name">UTS_Lec</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backup_restore">Backup &amp; Restore</string>
    <string name="sign_in_synchronize">Sign in and synchronize</string>
    <string name="notification">Notification</string>
    <string name="general_settings">General Setting</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="reminder">Reminder</string>
    <string name="time">Time</string>
    <string name="default_time">12:00</string>
    <string name="choose_time">Choose the time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="reminder_switch">Reminder Switch</string>
    <string name="time_period">Time Period</string>
    <string name="first_day_of_week">First Day of the Week</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="sunday">Sunday</string>
    <string name="forward">Forward</string>
    <string name="morning">Morning</string>
    <string name="start_at">Start at</string>
    <string name="choose_first_day">Start at</string>
    <string name="saturday">Saturday</string>
    <string name="monday">Monday</string>
    <string name="back">Back</string>
    <string name="language_option">Language Option</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="checked">Checked</string>
    <string name="afternoon">afternoon</string>
    <string name="evening">evening</string>
    <string name="end_of_day">end of the day</string>
    <string name="morning_time">09:00</string>
    <string name="afternoon_time">12:00</string>
    <string name="evening_time">17:00</string>
    <string name="end_of_day_time">21:00</string>
    <string name="current_streak">CURRENT STREAK</string>
    <string name="calendar">Calendar</string>
    <string name="history">HISTORY</string>
    <string name="habits">Habits</string>
    <string name="achievements">Achievements</string>
    <string name="best_streak">Best streak: 0</string>
    <string name="habit_finished">HABIT FINISHED</string>
    <string name="this_week">This week: 0</string>
    <string name="completion_rate">COMPLETION RATE</string>
    <string name="active">ACTIVE</string>
    <string name="sleep_icon">Sleep Icon</string>
    <string name="my_achievements">My Achievements</string>
    <string name="my_achievements_desc">You haven\'t gotten any achievements yet.</string>
    <string name="back_button_description">Back</string>
    <string name="add_habit">Add Habit</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter habit name</string>
    <string name="icon">Icon</string>
    <string name="icon_button_description">Select Icon</string>
    <string name="color">Color</string>
    <string name="color_button_description">Select Color</string>
    <string name="repeat">Repeat</string>
    <string name="anytime">Anytime</string>
    <string name="anytime_button_text">Anytime</string>
    <string name="morning_button_text">Morning</string>
    <string name="afternoon_button_text">Afternoon</string>
    <string name="evening_button_text">Evening</string>
    <string name="encouragement">Encouragement</string>
    <string name="encouragement_hint">Enter encouragement text</string>
    <string name="end_on">End On</string>
    <string name="unlimited">Unlimited</string>
    <string name="add">Add</string>
    <string name="anytime_button_description">anytime button description</string>
    <string name="do_it_at">Do It At</string>
    <string name="custom">custom\n</string>
    <string name="change">change</string>
    <string name="select_days">Select Days</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="achievement_icon">this is the achievement icon</string>
    <string name="channel_name">this is the channel name</string>
    <string name="channel_description">this is the channel description\n</string>
    <string name="select_repeat_days">Select Repeat Days</string>
    <string name="confirm">Confirm</string>
    <string name="menu">menu\n</string>
    <string name="update">UPDATE</string>
    <string name="update_habit">Update Habit</string>
    <string name="end_at">End at</string>
    <string name="morning_start_time">09:00</string>
    <string name="morning_end_time">11:59</string>
    <string name="afternoon_start_time">12:00</string>
    <string name="afternoon_end_time">14:59</string>
    <string name="evening_start_time">15:00</string>
    <string name="evening_end_time">17:59</string>
    <string name="login_text_register"><u>Already have an account? Login here</u></string>
    <string name="completed">completed</string>
    <string name="achievement_name">Achievement Name</string>
    <string name="achievement_requirement">Finish [data.requirement] habit/s</string>
    <string name="button4_description">Button 4 description</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_text"><u>Do not have an account? Register here</u></string>
    <string name="register">Register</string>
    <string name="full_name_hint">Full Name</string>
    <string name="id_number_hint">ID Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="select_color">Select Color</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="orange">Orange</string>
    <string name="completed_habits">COMPLETED HABITS</string>
    <string name="journey_header_text">Your Journey Starts Here!</string>
    <string name="button_text_sugar">Say Goodbye to Sugar</string>
    <string name="button_text_exercise">Exercise and Snooze</string>
    <string name="button_text_meditation">Meditation for Peace</string>
    <string name="button_text_water">Drink 2L Water Daily</string>
    <string name="bye_sugar_title">Bye Sugar</string>
    <string name="bye_sugar_description">Sugar is a type of carbohydrate that occurs naturally in foods such as fruits, vegetables, and dairy. Manufacturers also add sugar to many processed foods and drinks. Sugar is a carbohydrate that the body converts into glucose, which it uses for energy. When people eat sugar, the body uses it as a source of energy. However, eating too much sugar can lead to weight gain, tooth decay, and an increased risk of heart disease. Sugar is also linked to an increased risk of type 2 diabetes. Cutting back on sugar can help people lose weight, reduce their risk of heart disease, and lower their risk of type 2 diabetes.</string>
    <string name="start_button_text">Start</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="drink_water_title">Drink Water</string>
    <string name="drink_water_description">Drinking water is important for your health. It helps maintain the balance of bodily fluids, regulates body temperature, and aids digestion. Drinking water can also help you lose weight by increasing your metabolism and reducing your appetite. It is recommended that you drink at least 8 glasses of water a day to stay hydrated and healthy.</string>
    <string name="exercise_title">Exercise</string>
    <string name="exercise_description">Exercise is any bodily activity that enhances or maintains physical fitness and overall health and wellness. It is performed for various reasons, to aid growth and improve strength, prevent aging, develop muscles and the cardiovascular system, hone athletic skills, weight loss or maintenance, improve health, or simply for enjoyment. Exercise is a vital part of a healthy lifestyle and can help prevent a number of diseases.</string>
    <string name="meditation_title">Meditation</string>
    <string name="meditation_description">Meditation is a practice where an individual uses a technique – such as mindfulness, or focusing the mind on a particular object, thought, or activity – to train attention and awareness, and achieve a mentally clear and emotionally calm and stable state. Meditation has been practiced since antiquity in numerous religious traditions and beliefs. It is also practiced outside religious traditions. Different meditative practices have been developed in various cultures and traditions.</string>
    <string name="today">TODAY</string>
    <string name="month_name">Month Name</string>
    <string name="previous_month">Previous Month</string>
    <string name="date_text">01 Jan 2024</string>
    <string name="next_month">Next Month</string>
    <string name="no_habits">You have not added any habits yet</string>
    <string name="create_habit">CREATE A NEW HABIT</string>
    <string name="build_new_habit">BUILD A NEW HABIT</string>
    <string name="build_custom_habit">BUILD YOUR OWN CUSTOM HABIT</string>
    <string name="enter_custom_habit_name">Enter custom habit name</string>
    <string name="enter_description">Enter Description</string>
    <string name="save_custom_habit">Save Custom Habit</string>
    <string name="default_user_name">User</string>
    <string name="logout">Log Out</string>
    <string name="edit">Edit</string>
</resources>