<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2431"
    tools:context=".CreateHabitMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Back Button and Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/back_button"
                style="?android:attr/borderlessButtonStyle"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/back_button_description"
                android:layout_gravity="start"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_habit"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_marginStart="16dp" />
        </LinearLayout>

        <!-- Name Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/habitNameEditText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="#2A2E3B"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:textColor="#FFFFFF"
                android:inputType="text"
                android:autofillHints="name"
                android:hint="@string/name_hint"
                android:textColorHint="#FFFFFF" />
        </LinearLayout>

        <!-- Box with Text and Icon -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient_background"
            android:padding="16dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/icon"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

                <ImageButton
                    android:id="@+id/icon_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_forward"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/icon_button_description"
                    android:onClick="showIconBottomSheet" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFFFFF"
                android:layout_marginVertical="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

                <ImageButton
                    android:id="@+id/color_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_forward"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/color_button_description"
                    android:onClick="showColorBottomSheet" />
            </LinearLayout>
        </LinearLayout>

        <!-- Subtitle Repeat -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="24sp"/>

        <!-- Box with Text and Icon -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/gradient_background"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/anytime"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

            <ImageButton
                android:id="@+id/anytime_image_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_forward"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/anytime_button_description"
                android:onClick="showRepeatBottomSheet" />
        </LinearLayout>

        <!-- Subtitle Do It At -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_it_at"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="24sp"/>

        <!-- Buttons for Time -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/anytime_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/anytime_button_text"
                android:background="@drawable/button_background_selector"
                android:layout_margin="8dp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="onTimeButtonClick" />

            <Button
                android:id="@+id/morning_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/morning_button_text"
                android:background="@drawable/button_background_selector"
                android:layout_margin="8dp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="onTimeButtonClick" />

            <Button
                android:id="@+id/afternoon_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/afternoon_button_text"
                android:background="@drawable/button_background_selector"
                android:layout_margin="8dp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="onTimeButtonClick" />

            <Button
                android:id="@+id/evening_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/evening_button_text"
                android:background="@drawable/button_background_selector"
                android:layout_margin="8dp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="onTimeButtonClick" />
        </GridLayout>

        <!-- Subtitle Reminder -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="24sp"/>

        <!-- Reminder Switch -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/gradient_background"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reminder"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/reminder_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <!-- Encouragement Text Field -->
        <EditText
            android:id="@+id/encouragement_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/gradient_background"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:textColor="#FFFFFF"
            android:inputType="text"
            android:autofillHints="encouragement"
            android:hint="@string/encouragement_hint"
            android:textColorHint="#B0B0B0"
            android:visibility="gone" />

        <!-- Time Picker -->
        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <!-- Subtitle End On -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_on"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="24sp"/>

        <!-- End On Switch -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/gradient_background"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/end_on_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unlimited"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/end_on_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <!-- Date Picker -->
        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <!-- Add Button -->
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient_background_blue"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
</ScrollView>