<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/achievementIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_star_false"
        android:contentDescription="@string/achievement_icon" />

    <TextView
        android:id="@+id/achievementName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/achievement_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/achievementRequirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/achievement_requirement"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        android:paddingTop="8dp" />

</LinearLayout>